--- a/demo_MMES_DC(deconvolution).ipynb
+++ b/demo_MMES_DC(deconvolution).ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "config = tf.ConfigProto(gpu_options=tf.GPUOptions(visible_device_list=\"1\", allow_growth=True))\n",
+    "# config = tf.ConfigProto(gpu_options=tf.GPUOptions(visible_device_list=\"1\", allow_growth=True))\n",
     "\n",
     "# load a color image with blur\n",
     "img = imageio.imread('input_DC_leaves_blur15.png')\n",
