--- a/demo_MMES_DN(denoising).ipynb
+++ b/demo_MMES_DN(denoising).ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "config = tf.ConfigProto(gpu_options=tf.GPUOptions(visible_device_list=\"1\", allow_growth=True))\n",
+    "#config = tf.ConfigProto(gpu_options=tf.GPUOptions(visible_device_list=\"1\", allow_growth=True))\n",
     "\n",
     "# load a color image with noise\n",
     "img = imageio.imread('input_DN_butterfly_sig40.png')\n",
