--- a/demo_MMES_SR(superresolution).ipynb
+++ b/demo_MMES_SR(superresolution).ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "config = tf.ConfigProto(gpu_options=tf.GPUOptions(visible_device_list=\"1\", allow_growth=True))\n",
+    "#config = tf.ConfigProto(gpu_options=tf.GPUOptions(visible_device_list=\"1\", allow_growth=True))\n",
     "\n",
     "# load a color image with low resolution\n",
     "img = imageio.imread('input_SR_sailboat_low_res_128.png')\n",
